[workspace]
members = [
    "model_viewer", "wow_vr_lib",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "wayland"] }
bitflags = "2.9.1"
byteorder = "1.5.0"
custom_debug = "0.6.2"
flate2 = "1.1.2"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
num_enum = "0.7.4"
once_cell = "1.21.3"
thiserror = "2.0.12"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
