[package]
name = "wow_vr_lib"
version = "0.0.1"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_obj = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
custom_debug = { workspace = true }
flate2 = { workspace = true }
num_enum = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
tobj = { workspace = true }
wow-m2 = { workspace = true }
wow-mpq = { workspace = true }
