[package]
name = "wow_vr_lib"
version = "0.0.1"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["dds"] }
bevy_animation = { workspace = true }
bevy_asset = { workspace = true }
bevy_image = { workspace = true, features = ["dds"] }
bevy_obj = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
custom_debug = { workspace = true }
ddsfile = { workspace = true }
flate2 = { workspace = true }
num_enum = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tobj = { workspace = true }
wow-blp = { workspace = true }
wow-m2 = { workspace = true }
wow-mpq = { workspace = true }

[features]
debug-print-all = ["wow-m2/debug-print-all"]
